--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,32 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "src/main.ts",
-            "use": "@vercel/node"
-        }
+      {
+        "src": "src/main.ts",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "src/main.ts",
-            "methods": [
-                "GET",
-                "POST"
-            ]
-        }
+      {
+        "src": "/integration-specs",
+        "methods": ["GET"],
+        "headers": {
+          "Content-Type": "application/json"
+        },
+        "dest": "src/main.ts"
+      },
+      {
+        "src": "/webhooks",
+        "methods": ["POST"],
+        "headers": {
+          "Content-Type": "application/json"
+        },
+        "dest": "src/main.ts"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "src/main.ts"
+      }
     ]
-}
+  }
+  
